--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -46,21 +47,17 @@
                         </AnchorPane>
                         <AnchorPane minHeight="32.0" prefHeight="66.0" prefWidth="532.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <TextField fx:id="title" alignment="CENTER" layoutX="117.0" layoutY="1.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="25.0" prefWidth="420.0" promptText="\%title_prompt" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="4.0">
+                              <TextField fx:id="title" alignment="CENTER" layoutX="7.0" layoutY="4.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="35.0" prefWidth="365.0" promptText="\%title_prompt" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="129.0" AnchorPane.topAnchor="4.0">
                                  <font>
                                     <Font name="Arial Black" size="18.0" />
                                  </font>
                               </TextField>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="576.0" layoutY="10.0" minHeight="32.0" minWidth="36.0" prefHeight="43.0" prefWidth="48.0">
-                           <children>
-                              <ImageView fx:id="languageIndicator" fitHeight="24.0" fitWidth="36.0" layoutX="10.0" layoutY="2.0" pickOnBounds="true" AnchorPane.rightAnchor="-3.6000000000000014" AnchorPane.topAnchor="2.0" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane minHeight="21.0" minWidth="32.0" prefHeight="21.0" prefWidth="32.0">
-                           <children>
-                              <ChoiceBox fx:id="languageSelector" layoutX="3.2" layoutY="1.4" prefHeight="26.0" prefWidth="26.0" AnchorPane.bottomAnchor="16.2" AnchorPane.leftAnchor="3.2" AnchorPane.rightAnchor="3.1999999999999993" AnchorPane.topAnchor="1.4" />
+                              <AnchorPane layoutX="404.0" minHeight="32.0" minWidth="36.0" prefHeight="43.0" prefWidth="48.0">
+                                 <children>
+                                    <ImageView fx:id="languageIndicator" fitHeight="24.0" fitWidth="36.0" layoutX="6.0" layoutY="10.0" pickOnBounds="true" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="10.0" />
+                                 </children>
+                              </AnchorPane>
+                              <ComboBox fx:id="languageSelectorCombo" layoutX="452.0" layoutY="4.0" prefHeight="35.0" prefWidth="60.0" />
                            </children>
                         </AnchorPane>
                      </children>
@@ -318,6 +315,7 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
                               <WebView fx:id="webview" layoutX="-20.0" layoutY="11.2" minWidth="220.0" prefHeight="467.0" prefWidth="220.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <AnchorPane layoutX="141.0" layoutY="28.0" minHeight="21.0" minWidth="32.0" prefHeight="21.0" prefWidth="32.0" />
                            </children>
                         </AnchorPane>
                      </children>
