--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -269,9 +269,9 @@
                                  <children>
                                     <AnchorPane prefHeight="490.0" prefWidth="226.0" VBox.vgrow="ALWAYS">
                                        <children>
-                                          <AnchorPane layoutY="4.8" prefHeight="308.0" prefWidth="224.0" AnchorPane.bottomAnchor="161.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="5.0">
+                                          <AnchorPane layoutY="4.8" prefHeight="265.0" prefWidth="226.0" AnchorPane.bottomAnchor="192.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                              <children>
-                                                <TextArea fx:id="content" layoutY="-5.6" minHeight="200.0" minWidth="220.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="370.0" prefWidth="223.0" promptText="\%content_prompt" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-6.0">
+                                                <TextArea fx:id="content" layoutY="-5.6" minHeight="200.0" minWidth="220.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="370.0" prefWidth="223.0" promptText="\%content_prompt" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="-6.0">
                                                    <font>
                                                       <Font name="Arial" size="14.0" />
                                                    </font>
@@ -279,30 +279,34 @@
                                                       <Cursor fx:constant="TEXT" />
                                                    </cursor>
                                                 </TextArea>
-                                                <Button fx:id="done" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="128.60000000000002" layoutY="253.60000000000002" maxHeight="38.0" maxWidth="87.0" minHeight="23.0" minWidth="32.0" mnemonicParsing="false" onAction="#create" prefHeight="35.0" prefWidth="87.0" text="Done" textAlignment="CENTER" AnchorPane.bottomAnchor="7.199999999999989" AnchorPane.rightAnchor="8.199999999999989">
-                                                   <font>
-                                                      <Font name="Arial" size="14.0" />
-                                                   </font>
-                                                   <graphic>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="✓" textAlignment="CENTER" visible="false" wrappingWidth="24.0">
+                                                <AnchorPane layoutX="128.0" layoutY="253.0" prefHeight="35.0" prefWidth="79.0" AnchorPane.bottomAnchor="0.6000000000000014" AnchorPane.rightAnchor="0.0">
+                                                   <children>
+                                                      <Button fx:id="done" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" maxHeight="38.0" maxWidth="87.0" minHeight="23.0" minWidth="32.0" mnemonicParsing="false" onAction="#create" prefHeight="35.0" prefWidth="87.0" text="Done" textAlignment="CENTER" AnchorPane.bottomAnchor="7.199999999999989" AnchorPane.rightAnchor="8.199999999999989">
                                                          <font>
-                                                            <Font size="20.0" />
+                                                            <Font name="Arial" size="14.0" />
                                                          </font>
-                                                      </Text>
-                                                   </graphic>
-                                                </Button>
+                                                         <graphic>
+                                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="✓" textAlignment="CENTER" visible="false" wrappingWidth="24.0">
+                                                               <font>
+                                                                  <Font size="20.0" />
+                                                               </font>
+                                                            </Text>
+                                                         </graphic>
+                                                      </Button>
+                                                   </children>
+                                                </AnchorPane>
                                              </children>
                                           </AnchorPane>
-                                          <AnchorPane layoutX="2.0" layoutY="370.4" prefHeight="110.0" prefWidth="226.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0">
+                                          <AnchorPane layoutY="274.0" prefHeight="146.0" prefWidth="226.0" AnchorPane.bottomAnchor="41.200000000000045" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.799999999999983">
                                              <children>
-                                                <HBox prefHeight="32.0" prefWidth="222.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="3.200000000000017" AnchorPane.topAnchor="0.0">
+                                                <HBox prefHeight="32.0" prefWidth="222.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <children>
                                                       <ListView fx:id="fileDataListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" orientation="HORIZONTAL" prefHeight="40.0" prefWidth="223.0" HBox.hgrow="ALWAYS" />
                                                    </children>
                                                 </HBox>
                                              </children>
                                           </AnchorPane>
-                                          <AnchorPane layoutY="418.0" prefHeight="30.0" prefWidth="192.0" AnchorPane.bottomAnchor="3.552713678800501E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="418.0">
+                                          <AnchorPane layoutY="418.0" prefHeight="30.0" prefWidth="192.0" AnchorPane.bottomAnchor="3.552713678800501E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                              <children>
                                                 <Button fx:id="fileSelectButton" layoutX="1.4" layoutY="14.400000000000048" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#SelectAndUploadFile" prefHeight="26.0" prefWidth="79.0" text="Add file" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="1.4" />
                                                 <Button layoutX="87.0" layoutY="14.400000000000048" mnemonicParsing="false" onAction="#DeleteFilesNoteID" prefHeight="26.0" prefWidth="94.0" text="Delete files" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="87.0" />
