--- a/client/src/main/resources/client/scenes/CollectionOverview.fxml
+++ b/client/src/main/resources/client/scenes/CollectionOverview.fxml
@@ -28,7 +28,7 @@
                         </AnchorPane>
                         <AnchorPane layoutY="244.0" prefHeight="66.0" prefWidth="200.0" AnchorPane.bottomAnchor="-2.842170943040401E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="244.0">
                            <children>
-                              <Button fx:id="deleteCollectionButton" layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="50.0" AnchorPane.bottomAnchor="5.799999999999997" AnchorPane.leftAnchor="14.0">
+                              <Button fx:id="deleteCollectionButton" layoutX="14.0" layoutY="7.0" mnemonicParsing="false" onAction="#deleteCollection" prefHeight="51.0" prefWidth="50.0" AnchorPane.bottomAnchor="5.799999999999997" AnchorPane.leftAnchor="14.0">
                                  <graphic>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="🗑" textAlignment="CENTER" wrappingWidth="28.35430908203125">
                                        <font>
@@ -37,7 +37,7 @@
                                     </Text>
                                  </graphic>
                               </Button>
-                              <Button fx:id="addCollectionButton" layoutX="72.0" layoutY="7.399999999999999" mnemonicParsing="false" prefHeight="51.0" prefWidth="50.0" AnchorPane.bottomAnchor="5.399999999999999" AnchorPane.leftAnchor="72.0">
+                              <Button fx:id="addCollectionButton" layoutX="72.0" layoutY="7.399999999999999" mnemonicParsing="false" onAction="#addCollection" prefHeight="51.0" prefWidth="50.0" AnchorPane.bottomAnchor="5.399999999999999" AnchorPane.leftAnchor="72.0">
                                  <graphic>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="+" textAlignment="CENTER" translateY="-2.0" wrappingWidth="13.009032964706421">
                                        <font>
@@ -161,7 +161,7 @@
                                           </AnchorPane>
                                           <AnchorPane prefHeight="66.0" prefWidth="119.0">
                                              <children>
-                                                <Button fx:id="saveButton" layoutX="13.0" layoutY="15.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="73.0" text="Save" AnchorPane.bottomAnchor="8.199999999999996" AnchorPane.rightAnchor="32.60000000000001" />
+                                                <Button fx:id="saveButton" layoutX="13.0" layoutY="15.0" mnemonicParsing="false" onAction="#saveCollection" prefHeight="42.0" prefWidth="73.0" text="Save" AnchorPane.bottomAnchor="8.199999999999996" AnchorPane.rightAnchor="32.60000000000001" />
                                              </children>
                                           </AnchorPane>
                                        </children>
