--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -47,13 +46,21 @@
                         </AnchorPane>
                         <AnchorPane minHeight="32.0" prefHeight="66.0" prefWidth="532.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <TextField fx:id="title" alignment="CENTER" layoutX="7.0" layoutY="4.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="35.0" prefWidth="365.0" promptText="\%title_prompt" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="129.0" AnchorPane.topAnchor="4.0">
+                              <TextField fx:id="title" alignment="CENTER" layoutX="117.0" layoutY="1.0" onKeyTyped="#updateWebView" onMouseClicked="#updateNote" prefHeight="25.0" prefWidth="420.0" promptText="\%title_prompt" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="4.0">
                                  <font>
                                     <Font name="Arial Black" size="18.0" />
                                  </font>
                               </TextField>
-                              <ImageView fx:id="languageIndicator" fitHeight="24.0" fitWidth="36.0" layoutX="406.0" layoutY="10.0" pickOnBounds="true" AnchorPane.rightAnchor="77.20000000000005" AnchorPane.topAnchor="10.0" />
-                              <ComboBox fx:id="languageSelectorCombo" layoutX="452.0" layoutY="4.0" prefHeight="35.0" prefWidth="60.0" AnchorPane.bottomAnchor="4.0" AnchorPane.rightAnchor="7.2000000000000455" AnchorPane.topAnchor="4.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="576.0" layoutY="10.0" minHeight="32.0" minWidth="36.0" prefHeight="43.0" prefWidth="48.0">
+                           <children>
+                              <ImageView fx:id="languageIndicator" fitHeight="24.0" fitWidth="36.0" layoutX="10.0" layoutY="2.0" pickOnBounds="true" AnchorPane.rightAnchor="-3.6000000000000014" AnchorPane.topAnchor="2.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane minHeight="21.0" minWidth="32.0" prefHeight="21.0" prefWidth="32.0">
+                           <children>
+                              <ChoiceBox fx:id="languageSelector" layoutX="3.2" layoutY="1.4" prefHeight="26.0" prefWidth="26.0" AnchorPane.bottomAnchor="16.2" AnchorPane.leftAnchor="3.2" AnchorPane.rightAnchor="3.1999999999999993" AnchorPane.topAnchor="1.4" />
                            </children>
                         </AnchorPane>
                      </children>
@@ -159,7 +166,7 @@
                                     </AnchorPane>
                                     <AnchorPane prefHeight="47.0" prefWidth="150.0">
                                        <children>
-                                          <Button fx:id="deleteAllFilesButton" layoutX="4.0" layoutY="41.0" mnemonicParsing="false" onAction="#DeleteAllFiles" prefHeight="30.0" prefWidth="141.0" text="%delete_all_files" />
+                                          <Button layoutX="4.0" layoutY="41.0" mnemonicParsing="false" onAction="#DeleteAllFiles" prefHeight="30.0" prefWidth="141.0" text="Delete All Files" />
                                        </children>
                                     </AnchorPane>
                                     <AnchorPane maxHeight="104.0" minHeight="25.0" prefHeight="25.0" prefWidth="141.0">
@@ -272,12 +279,9 @@
                                                       <Cursor fx:constant="TEXT" />
                                                    </cursor>
                                                 </TextArea>
-                                                <Button fx:id="done" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="128.60000000000002" layoutY="253.60000000000002" maxHeight="38.0" maxWidth="87.0" minHeight="23.0" minWidth="32.0" mnemonicParsing="false" onAction="#create" prefHeight="35.0" prefWidth="87.0" text="%done" textAlignment="CENTER" AnchorPane.bottomAnchor="7.199999999999989" AnchorPane.rightAnchor="8.199999999999989">
-                                                   <font>
-                                                      <Font name="Arial" size="14.0" />
-                                                   </font>
-                                                   <graphic>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="✓" textAlignment="CENTER" visible="false" wrappingWidth="24.0">
+                                                <AnchorPane layoutX="128.0" layoutY="253.0" prefHeight="35.0" prefWidth="79.0" AnchorPane.bottomAnchor="0.6000000000000014" AnchorPane.rightAnchor="0.0">
+                                                   <children>
+                                                      <Button fx:id="done" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" maxHeight="38.0" maxWidth="87.0" minHeight="23.0" minWidth="32.0" mnemonicParsing="false" onAction="#create" prefHeight="35.0" prefWidth="87.0" text="Done" textAlignment="CENTER" AnchorPane.bottomAnchor="7.199999999999989" AnchorPane.rightAnchor="8.199999999999989">
                                                          <font>
                                                             <Font name="Arial" size="14.0" />
                                                          </font>
@@ -304,8 +308,8 @@
                                           </AnchorPane>
                                           <AnchorPane layoutY="418.0" prefHeight="30.0" prefWidth="192.0" AnchorPane.bottomAnchor="3.552713678800501E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                              <children>
-                                                <Button fx:id="fileSelectButton" layoutX="1.4" layoutY="14.400000000000048" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#SelectAndUploadFile" prefHeight="26.0" prefWidth="79.0" text="%add_file" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="1.4" />
-                                                <Button fx:id="deleteFilesButton" layoutX="87.0" layoutY="14.400000000000048" mnemonicParsing="false" onAction="#DeleteFilesNoteID" prefHeight="26.0" prefWidth="94.0" text="%delete_files" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="87.0" />
+                                                <Button fx:id="fileSelectButton" layoutX="1.4" layoutY="14.400000000000048" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#SelectAndUploadFile" prefHeight="26.0" prefWidth="79.0" text="Add file" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="1.4" />
+                                                <Button layoutX="87.0" layoutY="14.400000000000048" mnemonicParsing="false" onAction="#DeleteFilesNoteID" prefHeight="26.0" prefWidth="94.0" text="Delete files" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="87.0" />
                                                 <AnchorPane layoutX="200.0" layoutY="5.0" maxHeight="26.0" maxWidth="36.0" minHeight="23.0" minWidth="23.0" prefHeight="26.0" prefWidth="36.0" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="3.0" />
                                              </children>
                                           </AnchorPane>
@@ -318,7 +322,6 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
                               <WebView fx:id="webview" layoutX="-20.0" layoutY="11.2" minWidth="220.0" prefHeight="467.0" prefWidth="220.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                              <AnchorPane layoutX="141.0" layoutY="28.0" minHeight="21.0" minWidth="32.0" prefHeight="21.0" prefWidth="32.0" />
                            </children>
                         </AnchorPane>
                      </children>
