--- a/client/src/main/resources/client/scenes/NoteOverview.fxml
+++ b/client/src/main/resources/client/scenes/NoteOverview.fxml
@@ -80,7 +80,7 @@
                                              <children>
                                                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                                    <children>
-                                                      <ChoiceBox fx:id= "collectionMenu" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                      <ChoiceBox fx:id="collectionMenu" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
@@ -145,9 +145,9 @@
                                           </VBox>
                                        </children>
                                     </AnchorPane>
-                                    <AnchorPane prefHeight="206.0" prefWidth="141.0" VBox.vgrow="ALWAYS">
+                                    <AnchorPane prefHeight="42.0" prefWidth="141.0" VBox.vgrow="ALWAYS">
                                        <children>
-                                          <AnchorPane prefHeight="246.0" prefWidth="141.0" AnchorPane.bottomAnchor="-36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <AnchorPane prefHeight="198.0" prefWidth="141.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                              <children>
                                                 <ListView fx:id="listView" prefHeight="214.0" prefWidth="141.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
@@ -157,9 +157,13 @@
                                           <Insets left="5.0" right="5.0" />
                                        </VBox.margin>
                                     </AnchorPane>
-                                    <AnchorPane prefHeight="47.0" prefWidth="150.0">
+                                    <AnchorPane prefHeight="30.0" prefWidth="150.0">
                                        <children>
-                                          <Button fx:id="deleteAllFilesButton" layoutX="4.0" layoutY="41.0" mnemonicParsing="false" onAction="#deleteAllFiles" prefHeight="30.0" prefWidth="141.0" text="%delete_all_files" />
+                                          <HBox layoutX="4.8" layoutY="4.199999999999996" prefHeight="34.0" prefWidth="142.0" AnchorPane.bottomAnchor="-5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="3.0">
+                                             <children>
+                                                <Button fx:id="deleteAllFilesButton" mnemonicParsing="false" onAction="#deleteAllFiles" prefHeight="30.0" prefWidth="140.0" text="%delete_all_files" />
+                                             </children>
+                                          </HBox>
                                        </children>
                                     </AnchorPane>
                                     <AnchorPane maxHeight="104.0" minHeight="25.0" prefHeight="25.0" prefWidth="141.0">
@@ -171,7 +175,7 @@
                                              <children>
                                                 <AnchorPane maxHeight="23.0" maxWidth="23.0" minHeight="23.0" minWidth="23.0" prefHeight="200.0" prefWidth="200.0" translateX="-4.0">
                                                    <children>
-                                                      <Button fx:id="refreshButton" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="4.0" layoutY="6.0" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#refresh" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                      <Button fx:id="refreshButton" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="4.0" layoutY="6.0" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#refreshButtonPressed" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                          <font>
                                                             <Font name="Arial" size="15.0" />
                                                          </font>
@@ -295,7 +299,7 @@
                                                 </HBox>
                                              </children>
                                           </AnchorPane>
-                                          <AnchorPane layoutY="418.0" prefHeight="30.0" prefWidth="192.0" AnchorPane.bottomAnchor="3.552713678800501E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="418.0">
+                                          <AnchorPane layoutY="418.0" prefHeight="30.0" prefWidth="192.0" AnchorPane.bottomAnchor="3.552713678800501E-14" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                              <children>
                                                 <Button fx:id="fileSelectButton" layoutX="1.4" layoutY="14.400000000000048" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#selectAndUploadFile" prefHeight="26.0" prefWidth="79.0" text="%add_file" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="1.4" />
                                                 <Button fx:id="deleteFilesButton" layoutX="87.0" layoutY="14.400000000000048" mnemonicParsing="false" onAction="#deleteFilesNoteID" prefHeight="26.0" prefWidth="94.0" text="%delete_files" AnchorPane.bottomAnchor="2.3999999999999986" AnchorPane.leftAnchor="87.0" />
