--- a/client/src/main/resources/client/scenes/CollectionOverview.fxml
+++ b/client/src/main/resources/client/scenes/CollectionOverview.fxml
@@ -64,7 +64,7 @@
                                        <children>
                                           <AnchorPane prefHeight="62.0" prefWidth="106.0">
                                              <children>
-                                                <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" textAlignment="CENTER" AnchorPane.bottomAnchor="15.400000000000006" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="16.0">
+                                                <Text fx:id="collectionTitleLabel" layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%collection_title" textAlignment="CENTER" AnchorPane.bottomAnchor="15.400000000000006" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="16.0">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
@@ -86,7 +86,7 @@
                                        <children>
                                           <AnchorPane prefHeight="62.0" prefWidth="106.0">
                                              <children>
-                                                <Text layoutX="14.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Server:" AnchorPane.bottomAnchor="15.400000000000006" AnchorPane.leftAnchor="14.4" AnchorPane.topAnchor="16.0">
+                                                <Text fx:id="collectionServerLabel" layoutX="14.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%collection_server" AnchorPane.bottomAnchor="15.400000000000006" AnchorPane.leftAnchor="14.4" AnchorPane.topAnchor="16.0">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
@@ -108,7 +108,7 @@
                                        <children>
                                           <AnchorPane prefHeight="62.0" prefWidth="106.0">
                                              <children>
-                                                <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Collection:" AnchorPane.bottomAnchor="17.65859375" AnchorPane.leftAnchor="14.4" AnchorPane.topAnchor="16.0">
+                                                <Text fx:id="collectionNameLabel" layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%collection_name" AnchorPane.bottomAnchor="17.65859375" AnchorPane.leftAnchor="14.4" AnchorPane.topAnchor="16.0">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
@@ -130,7 +130,7 @@
                                        <children>
                                           <AnchorPane prefHeight="51.0" prefWidth="111.0">
                                              <children>
-                                                <Text layoutX="14.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" AnchorPane.bottomAnchor="9.082421875000001" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="8.799999999999997">
+                                                <Text fx:id="collectionStatusLabel" layoutX="14.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%collection_status" AnchorPane.bottomAnchor="9.082421875000001" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="8.799999999999997">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
@@ -139,7 +139,7 @@
                                           </AnchorPane>
                                           <AnchorPane prefHeight="51.0" prefWidth="280.0">
                                              <children>
-                                                <Text fx:id="collectionStatus" layoutY="29.623828125" strokeType="OUTSIDE" strokeWidth="0.0" text="Collections Exists" wrappingWidth="182.13669204711914" AnchorPane.bottomAnchor="17.05859375" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.2">
+                                                <Text fx:id="collectionStatus" layoutY="29.623828125" strokeType="OUTSIDE" strokeWidth="0.0" text="%collection_status_exists" wrappingWidth="182.13669204711914" AnchorPane.bottomAnchor="17.05859375" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.2">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
@@ -156,12 +156,12 @@
                                        <children>
                                           <AnchorPane prefHeight="66.0" prefWidth="114.0">
                                              <children>
-                                                <Button layoutX="11.400000000000006" layoutY="15.199999999999996" mnemonicParsing="false" prefHeight="42.0" prefWidth="119.0" text="Make Default" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="0.0" />
+                                                <Button fx:id="makeDefaultButton" layoutX="11.400000000000006" layoutY="15.199999999999996" mnemonicParsing="false" prefHeight="42.0" prefWidth="119.0" text="%collection_make_default" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
                                           <AnchorPane prefHeight="66.0" prefWidth="119.0">
                                              <children>
-                                                <Button fx:id="saveButton" layoutX="13.0" layoutY="15.0" mnemonicParsing="false" onAction="#saveCollection" prefHeight="42.0" prefWidth="73.0" text="Save" AnchorPane.bottomAnchor="8.199999999999996" AnchorPane.rightAnchor="32.60000000000001" />
+                                                <Button fx:id="saveButton" layoutX="13.0" layoutY="15.0" mnemonicParsing="false" onAction="#saveCollection" prefHeight="42.0" prefWidth="73.0" text="%collection_save" AnchorPane.bottomAnchor="8.199999999999996" AnchorPane.rightAnchor="32.60000000000001" />
                                              </children>
                                           </AnchorPane>
                                        </children>
